kubernetes/apps/gdd-service/keepit/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keepit
  annotations:
    tailscale.com/proxy-group: ts-ingress
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/name: Keepit
    gethomepage.dev/icon: download.svg
    gethomepage.dev/description: "Tailscale only | Reddit media backup"
    gethomepage.dev/siteMonitor: "http://keepit.gdd-service.svc:8080"
spec:
  ingressClassName: tailscale
  rules:
    - host: keepit.barn-walleye.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keepit
                port:
                  number: 8080
  tls:
    - hosts:
        - keepit.barn-walleye.ts.net
